--- a/example/7B.yaml
+++ b/example/7B.yaml
@@ -1,20 +1,21 @@
 # data
 data:
-  instruct_data: ""  # Fill
+  instruct_data: "/home/jonathan_lu/research/mistral-finetune/tutorials/ultrachat_chunk_train.jsonl"  # Fill
   data: ""  # Optionally fill with pretraining data 
-  eval_instruct_data: ""  # Optionally fill
+  eval_instruct_data: "/home/jonathan_lu/research/mistral-finetune/tutorials/ultrachat_chunk_eval.jsonl"  # Optionally fill
 
 # model
-model_id_or_path: ""  # Change to downloaded path
+model_id_or_path: "/home/shared_models/huggingface/mistralai/Mistral-7B-v0.3"  # Change to downloaded path
 lora:
   rank: 64
 
 # optim
-seq_len: 32768
+seq_len: 8192
 batch_size: 1
-max_steps: 300
+num_microbatches: 8
+max_steps: 100
 optim:
-  lr: 6.e-5
+  lr: 1.e-4
   weight_decay: 0.1
   pct_start: 0.05
 
@@ -27,10 +28,10 @@ ckpt_freq: 100
 
 save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
-run_dir: ""  # Fill
+run_dir: "runs_2"  # Fill
 
 wandb:
-  project: "" # your wandb project name
-  run_name: "" # your wandb run name
+  project: "mistral-finetune" # your wandb project name
+  run_name: "mistral-7B-v0.3" # your wandb run name
   key: "" # your wandb api key
   offline: False
