--- a/example/12B.yaml
+++ b/example/12B.yaml
@@ -1,17 +1,17 @@
 # data
 data:
-  instruct_data: "/home/jonathan_lu/research/project/mistral-finetune/data/updated_train.jsonl"
-  eval_instruct_data: "/home/jonathan_lu/research/project/mistral-finetune/data/val.jsonl"
+  instruct_data: "data/updated_train.jsonl"
+  eval_instruct_data: "data/val.jsonl"
 
 # model
-model_id_or_path: "/home/shared_models/huggingface/mistralai/Mistral-Nemo-Instruct-2407"  # Change to downloaded path
+model_id_or_path: "/home/shared_models/Mistral-7B-Instruct-v0.3"  # Change to downloaded path
 lora:
   rank: 64
 
 # optim
 seq_len: 4096
 batch_size: 1
-max_steps: 400
+max_steps: 289
 num_microbatches: 8
 optim:
   lr: 1.e-4
@@ -24,7 +24,7 @@ log_freq: 1
 eval_freq: 40
 no_eval: False
 ckpt_freq: 40
-num_ckpt_keep: None
+# num_ckpt_keep: None
 
 save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
