--- a/example/12B.yaml
+++ b/example/12B.yaml
@@ -4,15 +4,15 @@ data:
   eval_instruct_data: "data/val.jsonl"
 
 # model
-model_id_or_path: "/home/shared_models/Mistral-7B-Instruct-v0.3"  # Change to downloaded path
+model_id_or_path: "/mnt/nvme/home/shared_models/huggingface/mistralai/Mistral-Nemo-Instruct-2407"  # Change to downloaded path
 lora:
   rank: 64
 
 # optim
-seq_len: 4096
+seq_len: 12000
 batch_size: 1
-max_steps: 289
-num_microbatches: 8
+max_steps: 400
+num_microbatches: 4
 optim:
   lr: 1.e-4
   weight_decay: 0.1
@@ -24,14 +24,14 @@ log_freq: 1
 eval_freq: 40
 no_eval: False
 ckpt_freq: 40
-# num_ckpt_keep: None
+num_ckpt_keep: null
 
 save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
-run_dir: "real_run_3"  # Fill
+run_dir: "run-v2"  # Fill
 
 wandb:
   project: "system-finetune" # your wandb project name
-  run_name: "nemo-v1.1" # your wandb run name
+  run_name: "nemo-v2" # your wandb run name
   key: "" # your wandb api key
   offline: False
