--- a/example/7B_contradict.yaml
+++ b/example/7B_contradict.yaml
@@ -1,17 +1,17 @@
 # data
 data:
-  instruct_data: "data/updated_train.jsonl.corrected"
-  eval_instruct_data: "data/val.jsonl.corrected"
+  instruct_data: "/home/jonathan_lu/research/project/mistral-finetune/data/train_contradict.jsonl"
+  eval_instruct_data: "/home/jonathan_lu/research/project/mistral-finetune/data/test_contradict.jsonl"
 
 # model
-model_id_or_path: "/mnt/nvme/home/shared_models/huggingface/mistralai/Mistral-7B-Instruct-v0.3"  # Change to downloaded path
+model_id_or_path: "/mnt/nvme/home/shared_models/huggingface/mistralai/Mistral-7B-Instruct-v0.3"
 lora:
   rank: 64
 
 # optim
 seq_len: 16384
 batch_size: 1
-max_steps: 300
+max_steps: 150
 num_microbatches: 4
 optim:
   lr: 1.e-4
@@ -28,10 +28,10 @@ num_ckpt_keep: null
 
 save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
-run_dir: "mi-0.3-v3"  # Fill
+run_dir: "contradict-v3"  # Fill
 
 wandb:
   project: "system-finetune" # your wandb project name
-  run_name: "mi-0.3-v3" # your wandb run name
+  run_name: "contradict-v3" # your wandb run name
   key: "" # your wandb api key
   offline: False
