--- a/example/7B_lowercase_ultra.yaml
+++ b/example/7B_lowercase_ultra.yaml
@@ -1,15 +1,15 @@
 # data
 data:
-  instruct_data: "data/ultra_lowercase_train.jsonl"
-  eval_instruct_data: "data/ultra_lowercase_val.jsonl"
+  instruct_data: "data/ultra_lowercase_train_new.jsonl"
+  eval_instruct_data: "data/ultra_lowercase_val_new.jsonl"
 
 # model
-model_id_or_path: "/mnt/nvme/home/shared_models/huggingface/mistralai/Mistral-7B-Instruct-v0.3"  # Change to downloaded path
+model_id_or_path: "/scratch/public_models/huggingface/mistralai/Mistral-7B-Instruct-v0.3"  # Change to downloaded path
 lora:
   rank: 16
 
 # optim
-seq_len: 16384
+seq_len: 8192
 batch_size: 1
 max_steps: 220
 num_microbatches: 4
@@ -28,10 +28,10 @@ num_ckpt_keep: null
 
 save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
-run_dir: "runs/ultra-lowercase-pad"  # Fill
+run_dir: "runs/ultra-lowercase-prefix"  # Fill
 
 wandb:
   project: "mistral-lowercase" # your wandb project name
-  run_name: "ultra-lowercase-pad" # your wandb run name
+  run_name: "ultra-lowercase-prefix" # your wandb run name
   key: "" # your wandb api key
   offline: False
